--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ Pillow
 cython
 matplotlib
 scikit-image
-keras==2.4.3
-tensorflow==2.4.1
+tensorflow>=1.3.0
+keras>=2.0.8
 opencv-python
 h5py
 imgaug
